exports[`<Button/> Component > snapshots for Button component #0`] = `
<div
  spacing="small"
  id="primary-buttons"
  class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
>
  <button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span class="bp3-button-text">Text Button</span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span icon="plus" class="bp3-icon bp3-icon-plus StyledProps---main--1Wws"
      ><svg data-icon="plus" width="16" height="16" viewBox="0 0 16 16">
        <desc>plus</desc>
        <path
          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span class="bp3-button-text">Right Icon</span
    ><span
      icon="chevron-right"
      class="bp3-icon bp3-icon-chevron-right StyledProps---main--1Wws"
      ><svg
        data-icon="chevron-right"
        width="12"
        height="12"
        viewBox="0 0 16 16"
      >
        <desc>chevron-right</desc>
        <path
          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span
      icon="chevron-left"
      class="bp3-icon bp3-icon-chevron-left StyledProps---main--1Wws"
      ><svg data-icon="chevron-left" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-left</desc>
        <path
          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Left Icon</span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span class="bp3-button-text">Down Icon</span
    ><span
      icon="chevron-down"
      class="bp3-icon bp3-icon-chevron-down StyledProps---main--1Wws"
      ><svg data-icon="chevron-down" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-down</desc>
        <path
          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
    tabindex="-1"
  >
    <span icon="cog" class="bp3-icon bp3-icon-cog StyledProps---main--1Wws"
      ><svg data-icon="cog" width="12" height="12" viewBox="0 0 16 16">
        <desc>cog</desc>
        <path
          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Disabled</span></button
  ><button
    type="button"
    class="bp3-button bp3-disabled bp3-loading StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
    disabled=""
    tabindex="-1"
  >
    <div class="bp3-spinner bp3-button-spinner">
      <div class="bp3-spinner-animation">
        <svg
          width="20"
          height="20"
          stroke-width="16.00"
          viewBox="-3.00 -3.00 106.00 106.00"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          ></path>
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          ></path>
        </svg>
      </div>
    </div>
    <span class="bp3-button-text">Text Button</span>
  </button>
</div>
`;

exports[`<Button/> Component > snapshots for Button component #1`] = `
<div
  id="primary-borderless-buttons"
  class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
>
  <button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span class="bp3-button-text">Text Button</span></button
  ><button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span icon="plus" class="bp3-icon bp3-icon-plus StyledProps---main--1Wws"
      ><svg data-icon="plus" width="16" height="16" viewBox="0 0 16 16">
        <desc>plus</desc>
        <path
          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span class="bp3-button-text">Right Icon</span
    ><span
      icon="chevron-right"
      class="bp3-icon bp3-icon-chevron-right StyledProps---main--1Wws"
      ><svg
        data-icon="chevron-right"
        width="12"
        height="12"
        viewBox="0 0 16 16"
      >
        <desc>chevron-right</desc>
        <path
          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span
      icon="chevron-left"
      class="bp3-icon bp3-icon-chevron-left StyledProps---main--1Wws"
      ><svg data-icon="chevron-left" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-left</desc>
        <path
          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Left Icon</span></button
  ><button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span class="bp3-button-text">Down Icon</span
    ><span
      icon="chevron-down"
      class="bp3-icon bp3-icon-chevron-down StyledProps---main--1Wws"
      ><svg data-icon="chevron-down" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-down</desc>
        <path
          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
    tabindex="-1"
  >
    <span icon="cog" class="bp3-icon bp3-icon-cog StyledProps---main--1Wws"
      ><svg data-icon="cog" width="12" height="12" viewBox="0 0 16 16">
        <desc>cog</desc>
        <path
          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Disabled</span></button
  ><button
    type="button"
    class="bp3-button bp3-disabled bp3-loading bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
    disabled=""
    tabindex="-1"
  >
    <div class="bp3-spinner bp3-button-spinner">
      <div class="bp3-spinner-animation">
        <svg
          width="20"
          height="20"
          stroke-width="16.00"
          viewBox="-3.00 -3.00 106.00 106.00"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          ></path>
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          ></path>
        </svg>
      </div>
    </div>
    <span class="bp3-button-text">Text Button</span>
  </button>
</div>
`;

exports[`<Button/> Component > snapshots for Button component #2`] = `
<div
  spacing="small"
  id="secondary-buttons"
  class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
>
  <button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
  >
    <span class="bp3-button-text">Text Button</span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
  >
    <span icon="plus" class="bp3-icon bp3-icon-plus StyledProps---main--1Wws"
      ><svg data-icon="plus" width="16" height="16" viewBox="0 0 16 16">
        <desc>plus</desc>
        <path
          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
  >
    <span class="bp3-button-text">Right Icon</span
    ><span
      icon="chevron-right"
      class="bp3-icon bp3-icon-chevron-right StyledProps---main--1Wws"
      ><svg
        data-icon="chevron-right"
        width="12"
        height="12"
        viewBox="0 0 16 16"
      >
        <desc>chevron-right</desc>
        <path
          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
  >
    <span
      icon="chevron-left"
      class="bp3-icon bp3-icon-chevron-left StyledProps---main--1Wws"
      ><svg data-icon="chevron-left" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-left</desc>
        <path
          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Left Icon</span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
  >
    <span class="bp3-button-text">Down Icon</span
    ><span
      icon="chevron-down"
      class="bp3-icon bp3-icon-chevron-down StyledProps---main--1Wws"
      ><svg data-icon="chevron-down" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-down</desc>
        <path
          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
    tabindex="-1"
  >
    <span icon="cog" class="bp3-icon bp3-icon-cog StyledProps---main--1Wws"
      ><svg data-icon="cog" width="12" height="12" viewBox="0 0 16 16">
        <desc>cog</desc>
        <path
          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Disabled</span></button
  ><button
    type="button"
    class="bp3-button bp3-disabled bp3-loading StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    disabled=""
    tabindex="-1"
  >
    <div class="bp3-spinner bp3-button-spinner">
      <div class="bp3-spinner-animation">
        <svg
          width="20"
          height="20"
          stroke-width="16.00"
          viewBox="-3.00 -3.00 106.00 106.00"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          ></path>
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          ></path>
        </svg>
      </div>
    </div>
    <span icon="cog" class="bp3-icon bp3-icon-cog StyledProps---main--1Wws"
      ><svg data-icon="cog" width="16" height="16" viewBox="0 0 16 16">
        <desc>cog</desc>
        <path
          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
          fill-rule="evenodd"
        ></path></svg
    ></span>
  </button>
</div>
`;

exports[`<Button/> Component > snapshots for Button component #3`] = `
<div
  spacing="small"
  id="secondary-borderless-buttons"
  class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
>
  <button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
  >
    <span class="bp3-button-text">Text Button</span></button
  ><button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
  >
    <span icon="plus" class="bp3-icon bp3-icon-plus StyledProps---main--1Wws"
      ><svg data-icon="plus" width="16" height="16" viewBox="0 0 16 16">
        <desc>plus</desc>
        <path
          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
  >
    <span class="bp3-button-text">Right Icon</span
    ><span
      icon="chevron-right"
      class="bp3-icon bp3-icon-chevron-right StyledProps---main--1Wws"
      ><svg
        data-icon="chevron-right"
        width="12"
        height="12"
        viewBox="0 0 16 16"
      >
        <desc>chevron-right</desc>
        <path
          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
  >
    <span
      icon="chevron-left"
      class="bp3-icon bp3-icon-chevron-left StyledProps---main--1Wws"
      ><svg data-icon="chevron-left" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-left</desc>
        <path
          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Left Icon</span></button
  ><button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
  >
    <span class="bp3-button-text">Down Icon</span
    ><span
      icon="chevron-down"
      class="bp3-icon bp3-icon-chevron-down StyledProps---main--1Wws"
      ><svg data-icon="chevron-down" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-down</desc>
        <path
          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
    tabindex="-1"
  >
    <span icon="cog" class="bp3-icon bp3-icon-cog StyledProps---main--1Wws"
      ><svg data-icon="cog" width="12" height="12" viewBox="0 0 16 16">
        <desc>cog</desc>
        <path
          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Disabled</span></button
  ><button
    type="button"
    class="bp3-button bp3-disabled bp3-loading bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    disabled=""
    tabindex="-1"
  >
    <div class="bp3-spinner bp3-button-spinner">
      <div class="bp3-spinner-animation">
        <svg
          width="20"
          height="20"
          stroke-width="16.00"
          viewBox="-3.00 -3.00 106.00 106.00"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          ></path>
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          ></path>
        </svg>
      </div>
    </div>
    <span icon="cog" class="bp3-icon bp3-icon-cog StyledProps---main--1Wws"
      ><svg data-icon="cog" width="16" height="16" viewBox="0 0 16 16">
        <desc>cog</desc>
        <path
          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
          fill-rule="evenodd"
        ></path></svg
    ></span>
  </button>
</div>
`;

exports[`<Button/> Component > snapshots for Button component #4`] = `
<div
  spacing="small"
  id="success-buttons"
  class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
>
  <button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-success--hn02"
  >
    <span class="bp3-button-text">Text Button</span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-success--hn02"
  >
    <span icon="plus" class="bp3-icon bp3-icon-plus StyledProps---main--1Wws"
      ><svg data-icon="plus" width="16" height="16" viewBox="0 0 16 16">
        <desc>plus</desc>
        <path
          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-success--hn02"
  >
    <span class="bp3-button-text">Right Icon</span
    ><span
      icon="chevron-right"
      class="bp3-icon bp3-icon-chevron-right StyledProps---main--1Wws"
      ><svg
        data-icon="chevron-right"
        width="12"
        height="12"
        viewBox="0 0 16 16"
      >
        <desc>chevron-right</desc>
        <path
          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-success--hn02"
  >
    <span
      icon="chevron-left"
      class="bp3-icon bp3-icon-chevron-left StyledProps---main--1Wws"
      ><svg data-icon="chevron-left" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-left</desc>
        <path
          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Left Icon</span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-success--hn02"
  >
    <span class="bp3-button-text">Down Icon</span
    ><span
      icon="chevron-down"
      class="bp3-icon bp3-icon-chevron-down StyledProps---main--1Wws"
      ><svg data-icon="chevron-down" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-down</desc>
        <path
          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-success--hn02"
    tabindex="-1"
  >
    <span icon="cog" class="bp3-icon bp3-icon-cog StyledProps---main--1Wws"
      ><svg data-icon="cog" width="12" height="12" viewBox="0 0 16 16">
        <desc>cog</desc>
        <path
          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Disabled</span></button
  ><button
    type="button"
    class="bp3-button bp3-disabled bp3-loading StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-success--hn02"
    disabled=""
    tabindex="-1"
  >
    <div class="bp3-spinner bp3-button-spinner">
      <div class="bp3-spinner-animation">
        <svg
          width="20"
          height="20"
          stroke-width="16.00"
          viewBox="-3.00 -3.00 106.00 106.00"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          ></path>
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          ></path>
        </svg>
      </div>
    </div>
    <span class="bp3-button-text">Text Button</span>
  </button>
</div>
`;

exports[`<Button/> Component > snapshots for Button component #5`] = `
<div
  spacing="small"
  id="warning-buttons"
  class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
>
  <button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-warning--2N1t"
  >
    <span class="bp3-button-text">Text Button</span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-warning--2N1t"
  >
    <span icon="plus" class="bp3-icon bp3-icon-plus StyledProps---main--1Wws"
      ><svg data-icon="plus" width="16" height="16" viewBox="0 0 16 16">
        <desc>plus</desc>
        <path
          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-warning--2N1t"
  >
    <span class="bp3-button-text">Right Icon</span
    ><span
      icon="chevron-right"
      class="bp3-icon bp3-icon-chevron-right StyledProps---main--1Wws"
      ><svg
        data-icon="chevron-right"
        width="12"
        height="12"
        viewBox="0 0 16 16"
      >
        <desc>chevron-right</desc>
        <path
          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-warning--2N1t"
  >
    <span
      icon="chevron-left"
      class="bp3-icon bp3-icon-chevron-left StyledProps---main--1Wws"
      ><svg data-icon="chevron-left" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-left</desc>
        <path
          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Left Icon</span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-warning--2N1t"
  >
    <span class="bp3-button-text">Down Icon</span
    ><span
      icon="chevron-down"
      class="bp3-icon bp3-icon-chevron-down StyledProps---main--1Wws"
      ><svg data-icon="chevron-down" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-down</desc>
        <path
          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-warning--2N1t"
    tabindex="-1"
  >
    <span icon="cog" class="bp3-icon bp3-icon-cog StyledProps---main--1Wws"
      ><svg data-icon="cog" width="12" height="12" viewBox="0 0 16 16">
        <desc>cog</desc>
        <path
          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Disabled</span></button
  ><button
    type="button"
    class="bp3-button bp3-disabled bp3-loading StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-warning--2N1t"
    disabled=""
    tabindex="-1"
  >
    <div class="bp3-spinner bp3-button-spinner">
      <div class="bp3-spinner-animation">
        <svg
          width="20"
          height="20"
          stroke-width="16.00"
          viewBox="-3.00 -3.00 106.00 106.00"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          ></path>
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          ></path>
        </svg>
      </div>
    </div>
    <span class="bp3-button-text">Text Button</span>
  </button>
</div>
`;

exports[`<Button/> Component > snapshots for Button component #6`] = `
<div
  spacing="small"
  id="danger-buttons"
  class="Layout---horizontal--3rmQ Layout---layout-spacing-small--2ZKb StyledProps---main--1Wws"
>
  <button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-danger--1PFK"
  >
    <span class="bp3-button-text">Text Button</span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-danger--1PFK"
  >
    <span icon="plus" class="bp3-icon bp3-icon-plus StyledProps---main--1Wws"
      ><svg data-icon="plus" width="16" height="16" viewBox="0 0 16 16">
        <desc>plus</desc>
        <path
          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-danger--1PFK"
  >
    <span class="bp3-button-text">Right Icon</span
    ><span
      icon="chevron-right"
      class="bp3-icon bp3-icon-chevron-right StyledProps---main--1Wws"
      ><svg
        data-icon="chevron-right"
        width="12"
        height="12"
        viewBox="0 0 16 16"
      >
        <desc>chevron-right</desc>
        <path
          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-danger--1PFK"
  >
    <span
      icon="chevron-left"
      class="bp3-icon bp3-icon-chevron-left StyledProps---main--1Wws"
      ><svg data-icon="chevron-left" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-left</desc>
        <path
          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Left Icon</span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-danger--1PFK"
  >
    <span class="bp3-button-text">Down Icon</span
    ><span
      icon="chevron-down"
      class="bp3-icon bp3-icon-chevron-down StyledProps---main--1Wws"
      ><svg data-icon="chevron-down" width="12" height="12" viewBox="0 0 16 16">
        <desc>chevron-down</desc>
        <path
          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-danger--1PFK"
    tabindex="-1"
  >
    <span icon="cog" class="bp3-icon bp3-icon-cog StyledProps---main--1Wws"
      ><svg data-icon="cog" width="12" height="12" viewBox="0 0 16 16">
        <desc>cog</desc>
        <path
          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
          fill-rule="evenodd"
        ></path></svg></span
    ><span class="bp3-button-text">Disabled</span></button
  ><button
    type="button"
    class="bp3-button bp3-disabled bp3-loading StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-danger--1PFK"
    disabled=""
    tabindex="-1"
  >
    <div class="bp3-spinner bp3-button-spinner">
      <div class="bp3-spinner-animation">
        <svg
          width="20"
          height="20"
          stroke-width="16.00"
          viewBox="-3.00 -3.00 106.00 106.00"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          ></path>
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          ></path>
        </svg>
      </div>
    </div>
    <span class="bp3-button-text">Text Button</span>
  </button>
</div>
`;

exports[`<Button/> Component > snapshots for Button component #7`] = `
<div
  spacing="xsmall"
  id="icon-only-buttons"
  class="Layout---horizontal--3rmQ Layout---layout-spacing-xsmall--C3jb StyledProps---main--1Wws"
>
  <button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
  >
    <span icon="plus" class="bp3-icon bp3-icon-plus StyledProps---main--1Wws"
      ><svg data-icon="plus" width="16" height="16" viewBox="0 0 16 16">
        <desc>plus</desc>
        <path
          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    tabindex="-1"
  >
    <span icon="plus" class="bp3-icon bp3-icon-plus StyledProps---main--1Wws"
      ><svg data-icon="plus" width="16" height="16" viewBox="0 0 16 16">
        <desc>plus</desc>
        <path
          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
  >
    <span icon="plus" class="bp3-icon bp3-icon-plus StyledProps---main--1Wws"
      ><svg data-icon="plus" width="16" height="16" viewBox="0 0 16 16">
        <desc>plus</desc>
        <path
          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    tabindex="-1"
  >
    <span icon="plus" class="bp3-icon bp3-icon-plus StyledProps---main--1Wws"
      ><svg data-icon="plus" width="16" height="16" viewBox="0 0 16 16">
        <desc>plus</desc>
        <path
          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span icon="build" class="bp3-icon bp3-icon-build StyledProps---main--1Wws"
      ><svg data-icon="build" width="16" height="16" viewBox="0 0 16 16">
        <desc>build</desc>
        <path
          d="M15.39 12.41L7.7 6l1.07-1.1c.34-.34-.12-.63.12-1.26.88-2.17 3.41-2.35 3.41-2.35s.36-.37.71-.72C9.74-.81 7.53.53 6.54 1.4L3.12 4.9l-.71.72c-.39.4-.39 1.05 0 1.45l-.7.72c-.39-.4-1.02-.4-1.41 0s-.39 1.05 0 1.45l1.41 1.45c.39.4 1.02.4 1.41 0s.39-1.05 0-1.45l.71-.72c.39.4 1.02.4 1.41 0l.8-.82 6.39 7.67c.82.82 2.14.82 2.96 0 .81-.82.81-2.15 0-2.96z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
    tabindex="-1"
  >
    <span icon="build" class="bp3-icon bp3-icon-build StyledProps---main--1Wws"
      ><svg data-icon="build" width="16" height="16" viewBox="0 0 16 16">
        <desc>build</desc>
        <path
          d="M15.39 12.41L7.7 6l1.07-1.1c.34-.34-.12-.63.12-1.26.88-2.17 3.41-2.35 3.41-2.35s.36-.37.71-.72C9.74-.81 7.53.53 6.54 1.4L3.12 4.9l-.71.72c-.39.4-.39 1.05 0 1.45l-.7.72c-.39-.4-1.02-.4-1.41 0s-.39 1.05 0 1.45l1.41 1.45c.39.4 1.02.4 1.41 0s.39-1.05 0-1.45l.71-.72c.39.4 1.02.4 1.41 0l.8-.82 6.39 7.67c.82.82 2.14.82 2.96 0 .81-.82.81-2.15 0-2.96z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    <span icon="build" class="bp3-icon bp3-icon-build StyledProps---main--1Wws"
      ><svg data-icon="build" width="16" height="16" viewBox="0 0 16 16">
        <desc>build</desc>
        <path
          d="M15.39 12.41L7.7 6l1.07-1.1c.34-.34-.12-.63.12-1.26.88-2.17 3.41-2.35 3.41-2.35s.36-.37.71-.72C9.74-.81 7.53.53 6.54 1.4L3.12 4.9l-.71.72c-.39.4-.39 1.05 0 1.45l-.7.72c-.39-.4-1.02-.4-1.41 0s-.39 1.05 0 1.45l1.41 1.45c.39.4 1.02.4 1.41 0s.39-1.05 0-1.45l.71-.72c.39.4 1.02.4 1.41 0l.8-.82 6.39 7.67c.82.82 2.14.82 2.96 0 .81-.82.81-2.15 0-2.96z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
    tabindex="-1"
  >
    <span icon="build" class="bp3-icon bp3-icon-build StyledProps---main--1Wws"
      ><svg data-icon="build" width="16" height="16" viewBox="0 0 16 16">
        <desc>build</desc>
        <path
          d="M15.39 12.41L7.7 6l1.07-1.1c.34-.34-.12-.63.12-1.26.88-2.17 3.41-2.35 3.41-2.35s.36-.37.71-.72C9.74-.81 7.53.53 6.54 1.4L3.12 4.9l-.71.72c-.39.4-.39 1.05 0 1.45l-.7.72c-.39-.4-1.02-.4-1.41 0s-.39 1.05 0 1.45l1.41 1.45c.39.4 1.02.4 1.41 0s.39-1.05 0-1.45l.71-.72c.39.4 1.02.4 1.41 0l.8-.82 6.39 7.67c.82.82 2.14.82 2.96 0 .81-.82.81-2.15 0-2.96z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-success--hn02"
  >
    <span
      icon="chevron-left"
      class="bp3-icon bp3-icon-chevron-left StyledProps---main--1Wws"
      ><svg data-icon="chevron-left" width="16" height="16" viewBox="0 0 16 16">
        <desc>chevron-left</desc>
        <path
          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-success--hn02"
    tabindex="-1"
  >
    <span
      icon="chevron-left"
      class="bp3-icon bp3-icon-chevron-left StyledProps---main--1Wws"
      ><svg data-icon="chevron-left" width="16" height="16" viewBox="0 0 16 16">
        <desc>chevron-left</desc>
        <path
          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-warning--2N1t"
  >
    <span
      icon="chevron-right"
      class="bp3-icon bp3-icon-chevron-right StyledProps---main--1Wws"
      ><svg
        data-icon="chevron-right"
        width="16"
        height="16"
        viewBox="0 0 16 16"
      >
        <desc>chevron-right</desc>
        <path
          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-warning--2N1t"
    tabindex="-1"
  >
    <span
      icon="chevron-right"
      class="bp3-icon bp3-icon-chevron-right StyledProps---main--1Wws"
      ><svg
        data-icon="chevron-right"
        width="16"
        height="16"
        viewBox="0 0 16 16"
      >
        <desc>chevron-right</desc>
        <path
          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-danger--1PFK"
  >
    <span
      icon="delete"
      class="bp3-icon bp3-icon-delete StyledProps---main--1Wws"
      ><svg data-icon="delete" width="16" height="16" viewBox="0 0 16 16">
        <desc>delete</desc>
        <path
          d="M11.99 4.99a1.003 1.003 0 00-1.71-.71l-2.29 2.3L5.7 4.29a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l2.29 2.29-2.29 2.29A1.003 1.003 0 005.7 11.7l2.29-2.29 2.29 2.29a1.003 1.003 0 001.42-1.42L9.41 7.99 11.7 5.7c.18-.18.29-.43.29-.71zm-4-5c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
          fill-rule="evenodd"
        ></path></svg
    ></span></button
  ><button
    type="button"
    disabled=""
    class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-danger--1PFK"
    tabindex="-1"
  >
    <span
      icon="delete"
      class="bp3-icon bp3-icon-delete StyledProps---main--1Wws"
      ><svg data-icon="delete" width="16" height="16" viewBox="0 0 16 16">
        <desc>delete</desc>
        <path
          d="M11.99 4.99a1.003 1.003 0 00-1.71-.71l-2.29 2.3L5.7 4.29a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l2.29 2.29-2.29 2.29A1.003 1.003 0 005.7 11.7l2.29-2.29 2.29 2.29a1.003 1.003 0 001.42-1.42L9.41 7.99 11.7 5.7c.18-.18.29-.43.29-.71zm-4-5c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.68 6-6 6z"
          fill-rule="evenodd"
        ></path></svg
    ></span>
  </button>
</div>
`;

exports[`<Button/> Component > snapshots for Button component #8`] = `
<div
  id="icon-only-borderless-buttons"
  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---flex--2Jz8"
>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---inline--1f52"
  >
    <button
      type="button"
      class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    >
      <span class="bp3-icon StyledProps---main--1Wws"
        ><svg viewBox="0 0 14 14" width="16" height="16">
          <path
            d="M4 0H1C.4 0 0 .4 0 1v12c0 .6.4 1 1 1h3c.6 0 1-.4 1-1V1c0-.6-.4-1-1-1zm9 0h-3c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h3c.6 0 1-.4 1-1V1c0-.6-.4-1-1-1z"
            fill="#4d5969"
          ></path></svg
      ></span></button
    ><button
      type="button"
      class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    >
      <span class="bp3-icon StyledProps---main--1Wws"
        ><svg viewBox="0 0 11 14" width="16" height="16">
          <path
            d="M11 7c0-.4-.2-.7-.4-.8L1.4.2C1.2.1 1.1 0 .9 0 .4 0 0 .4 0 1v12c0 .6.4 1 .9 1 .2 0 .3-.1.5-.2l9.2-6c.2-.1.4-.4.4-.8z"
            fill="#4d5969"
          ></path></svg
      ></span></button
    ><button
      type="button"
      class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    >
      <span class="bp3-icon StyledProps---main--1Wws"
        ><svg viewBox="0 0 14 14" width="16" height="16">
          <path
            d="M13 0H1C.4 0 0 .4 0 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V1c0-.6-.4-1-1-1z"
            fill="#4d5969"
          ></path></svg
      ></span></button
    ><button
      type="button"
      class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    >
      <span class="bp3-icon StyledProps---main--1Wws"
        ><svg viewBox="0 0 13 3" width="16" height="16">
          <g fill="#4d5969">
            <path
              d="M1.5 0C2.3 0 3 .7 3 1.5S2.3 3 1.5 3 0 2.3 0 1.5.7 0 1.5 0M11.5 0c.8 0 1.5.7 1.5 1.5S12.3 3 11.5 3 10 2.3 10 1.5 10.7 0 11.5 0M6.5 0C7.3 0 8 .7 8 1.5S7.3 3 6.5 3C5.9 3 5.4 2.5 5 1.5 5.4.5 5.9 0 6.5 0"
            ></path>
          </g></svg
      ></span>
    </button>
  </div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---inline--1f52"
  >
    <button
      type="button"
      class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    >
      <span class="bp3-icon StyledProps---main--1Wws"
        ><svg viewBox="0 0 14 14" width="10" height="10">
          <path
            d="M4 0H1C.4 0 0 .4 0 1v12c0 .6.4 1 1 1h3c.6 0 1-.4 1-1V1c0-.6-.4-1-1-1zm9 0h-3c-.6 0-1 .4-1 1v12c0 .6.4 1 1 1h3c.6 0 1-.4 1-1V1c0-.6-.4-1-1-1z"
            fill="#4d5969"
          ></path></svg
      ></span></button
    ><button
      type="button"
      class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    >
      <span class="bp3-icon StyledProps---main--1Wws"
        ><svg viewBox="0 0 11 14" width="10" height="10">
          <path
            d="M11 7c0-.4-.2-.7-.4-.8L1.4.2C1.2.1 1.1 0 .9 0 .4 0 0 .4 0 1v12c0 .6.4 1 .9 1 .2 0 .3-.1.5-.2l9.2-6c.2-.1.4-.4.4-.8z"
            fill="#4d5969"
          ></path></svg
      ></span></button
    ><button
      type="button"
      class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    >
      <span class="bp3-icon StyledProps---main--1Wws"
        ><svg viewBox="0 0 14 14" width="10" height="10">
          <path
            d="M13 0H1C.4 0 0 .4 0 1v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1V1c0-.6-.4-1-1-1z"
            fill="#4d5969"
          ></path></svg
      ></span></button
    ><button
      type="button"
      class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
    >
      <span class="bp3-icon StyledProps---main--1Wws"
        ><svg viewBox="0 0 13 3" width="10" height="10">
          <g fill="#4d5969">
            <path
              d="M1.5 0C2.3 0 3 .7 3 1.5S2.3 3 1.5 3 0 2.3 0 1.5.7 0 1.5 0M11.5 0c.8 0 1.5.7 1.5 1.5S12.3 3 11.5 3 10 2.3 10 1.5 10.7 0 11.5 0M6.5 0C7.3 0 8 .7 8 1.5S7.3 3 6.5 3C5.9 3 5.4 2.5 5 1.5 5.4.5 5.9 0 6.5 0"
            ></path>
          </g></svg
      ></span>
    </button>
  </div>
</div>
`;
